--- a/app/views/spree/admin/pages/index.html.erb
+++ b/app/views/spree/admin/pages/index.html.erb
@@ -31,7 +31,7 @@
           <td class="actions text-right" data-hook="admin_pages_index_row_actions">
             <%= link_to_edit page, no_text: true %>
             <% if defined?(SpreeGlobalize) %>
-              <%= link_to '', spree.admin_translations_path('page', page.id), class: 'btn btn-primary btn-sm icon icon-translate with-tip', data: { 'original-title' => Spree.t(:'i18n.translations') } %>
+              <%= link_to content_tag(:span, '', class: 'icon icon-translate'), spree.admin_translations_path('page', page.id), class: 'btn btn-primary btn-sm icon-link with-tip', data: { 'original-title' => Spree.t(:'i18n.translations') } %>
             <% end %>
             <%= link_to_delete page, no_text: true %>
           </td>
