--- a/app/views/spree/admin/translations/page.html.erb
+++ b/app/views/spree/admin/translations/page.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:back_to_page_list), spree.admin_pages_path, :icon => 'icon-arrow-left' %>
+  <%= button_link_to Spree.t(:back_to_page_list), spree.admin_pages_path, :icon => 'arrow-left' %>
 <% end %>
 
 <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @page } %>
