--- a/app/views/spree/admin/pages/index.html.erb
+++ b/app/views/spree/admin/pages/index.html.erb
@@ -30,7 +30,9 @@
           <td class="text-center"><%= content_tag(:i, '', class: 'icon icon-ok') if page.visible %></td>
           <td class="actions text-right" data-hook="admin_pages_index_row_actions">
             <%= link_to_edit page, no_text: true %>
-            <%= link_to '', spree.admin_translations_path('page', page.id), class: 'btn btn-primary btn-sm icon icon-translate with-tip', data: { 'original-title' => Spree.t(:'i18n.translations') } %>
+            <% if defined?(SpreeGlobalize) %>
+              <%= link_to '', spree.admin_translations_path('page', page.id), class: 'btn btn-primary btn-sm icon icon-translate with-tip', data: { 'original-title' => Spree.t(:'i18n.translations') } %>
+            <% end %>
             <%= link_to_delete page, no_text: true %>
           </td>
         </tr>
