--- a/app/views/spree/static_content/show.html.erb
+++ b/app/views/spree/static_content/show.html.erb
@@ -18,9 +18,11 @@
       <%= render partial: 'spree/shared/taxonomies' %>
     <% end %>
   <% end %>
-
-  <h1><%= @page.title %></h1>
-  <div id="page_content">
-    <%= raw @page.body %>
+  
+  <div class="container" id="page_content">
+    <h1 class="text-uppercase pt-4"><%= @page.title %></h1>
+    <div class="pt-4 pb-4">
+      <%= raw @page.body %>
+    </div>
   </div>
 <% end %>
